add new method in swagger
